# otus-editor

./: .travis.yml  CMakeLists.txt  Editor.h  README.md  controller.h  main.cpp  model.h  view.h
